--- a/app/globals.css
+++ b/app/globals.css
@@ -91,7 +91,7 @@
     padding: 5rem;
   }
   h1{
-    font-family: gastromond, sans-serif;
+    font-family: Poppins, serif;
     font-weight: 400;
     font-style: normal;
     font-size: 3.5em;
