--- a/app/globals.css
+++ b/app/globals.css
@@ -109,6 +109,9 @@
     font-size: 1rem;
     color: var(--white);
   }
+  .hide{
+    display: none;
+  }
   li.color-swatch{
     display: flex;
     flex-direction: row;
